--- a/app/src/main/res/layout/fragment_played_match.xml
+++ b/app/src/main/res/layout/fragment_played_match.xml
@@ -6,20 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.PlayedMatchesFragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -52,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="48dp"
-                android:text="@string/no_data"
+                android:text="@string/played_match_no_data"
                 android:textAlignment="center" />
 
         </FrameLayout>
