--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,12 +1,12 @@
 <resources>
     <!-- Reply Preference -->
-    <string-array name="reply_entries">
-        <item>Reply</item>
-        <item>Reply to all</item>
+    <string-array name="local_cpu_entries">
+        <item>@string/prefs_local_cpu_random</item>
+        <item>@string/prefs_local_cpu_simple</item>
     </string-array>
 
-    <string-array name="reply_values">
-        <item>reply</item>
-        <item>reply_all</item>
+    <string-array name="local_cpu_values">
+        <item>RANDOM</item>
+        <item>SIMPLE</item>
     </string-array>
 </resources>
