--- a/app/src/main/res/layout/activity_reversi.xml
+++ b/app/src/main/res/layout/activity_reversi.xml
@@ -20,12 +20,12 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-
     <fragment
         android:id="@+id/navHostFragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph" />
 
