--- a/app/src/main/res/layout/fragment_launcher.xml
+++ b/app/src/main/res/layout/fragment_launcher.xml
@@ -7,26 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.PlayedMatchesFragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-
     <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="#FFFFFF"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".ui.fragments.LauncherFragment">
 
 
@@ -38,10 +22,12 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="128dp"
-                android:layout_height="128dp"
-                android:layout_marginTop="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="24dp"
                 android:contentDescription="@string/logo_description"
+                app:layout_constraintBottom_toTopOf="@+id/btnHumanVsNetwork"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -51,14 +37,16 @@
                 android:id="@+id/btnHumanVsNetwork"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="32dp"
+                android:layout_marginStart="@dimen/launcher_button_horizontal_margin"
+                android:layout_marginEnd="@dimen/launcher_button_horizontal_margin"
+                android:layout_marginBottom="24dp"
                 android:background="@drawable/rounded_button"
-                android:paddingTop="24dp"
-                android:paddingBottom="24dp"
+                android:drawableTop="@drawable/match_p1_network"
+                android:drawableTint="@color/app_light_blue"
+                android:paddingTop="@dimen/launcher_button_vertical_padding"
+                android:paddingBottom="@dimen/launcher_button_vertical_padding"
                 android:tag="PLAYER_VS_NETWORK"
-                android:text="@string/player_vs_network"
+                android:text="@string/launcher_player_vs_network"
                 android:textColor="@color/app_light_blue"
                 app:layout_constraintBottom_toTopOf="@+id/btnHumanVsCPU"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -68,14 +56,16 @@
                 android:id="@+id/btnHumanVsCPU"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginStart="@dimen/launcher_button_horizontal_margin"
+                android:layout_marginEnd="@dimen/launcher_button_horizontal_margin"
                 android:layout_marginBottom="24dp"
                 android:background="@drawable/rounded_button"
-                android:paddingTop="24dp"
-                android:paddingBottom="24dp"
+                android:paddingTop="@dimen/launcher_button_vertical_padding"
+                android:paddingBottom="@dimen/launcher_button_vertical_padding"
                 android:tag="PLAYER_VS_CPU"
-                android:text="@string/player1_vs_CPU2"
+                android:drawableTop="@drawable/match_p1_cpu"
+                android:drawableTint="@color/app_light_blue"
+                android:text="@string/launcher_player1_vs_CPU2"
                 android:textColor="@color/app_light_blue"
                 app:layout_constraintBottom_toTopOf="@+id/btnHumanVsHuman"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -85,49 +75,35 @@
                 android:id="@+id/btnHumanVsHuman"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginStart="@dimen/launcher_button_horizontal_margin"
+                android:layout_marginEnd="@dimen/launcher_button_horizontal_margin"
                 android:layout_marginBottom="24dp"
                 android:background="@drawable/rounded_button"
-                android:paddingTop="24dp"
-                android:paddingBottom="24dp"
+                android:paddingTop="@dimen/launcher_button_vertical_padding"
+                android:paddingBottom="@dimen/launcher_button_vertical_padding"
                 android:tag="PLAYER_VS_PLAYER"
-                android:text="@string/player1_vs_player2"
+                android:drawableTop="@drawable/match_p1_p2"
+                android:drawableTint="@color/app_light_blue"
+                android:text="@string/launcher_player1_vs_player2"
                 android:textColor="@color/app_light_blue"
                 app:layout_constraintBottom_toTopOf="@+id/btnCPUVsHuman"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
-
             <Button
                 android:id="@+id/btnCPUVsHuman"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginStart="@dimen/launcher_button_horizontal_margin"
+                android:layout_marginEnd="@dimen/launcher_button_horizontal_margin"
                 android:layout_marginBottom="24dp"
                 android:background="@drawable/rounded_button"
-                android:paddingTop="24dp"
-                android:paddingBottom="24dp"
+                android:drawableTop="@drawable/match_cpu_p2"
+                android:drawableTint="@color/app_light_blue"
+                android:paddingTop="@dimen/launcher_button_vertical_padding"
+                android:paddingBottom="@dimen/launcher_button_vertical_padding"
                 android:tag="CPU_VS_PLAYER"
-                android:text="@string/cpu_vs_player2"
-                android:textColor="@color/app_light_blue"
-                app:layout_constraintBottom_toTopOf="@+id/btnCPUVsCPU"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <Button
-                android:id="@+id/btnCPUVsCPU"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="24dp"
-                android:background="@drawable/rounded_button"
-                android:paddingTop="24dp"
-                android:paddingBottom="24dp"
-                android:tag="CPU_VS_CPU"
-                android:text="@string/cpu_vs_cpu"
+                android:text="@string/launcher_cpu_vs_player2"
                 android:textColor="@color/app_light_blue"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
