--- a/app/src/debug/res/values/ids.xml
+++ b/app/src/debug/res/values/ids.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="server_url">https://25716af42045.ngrok.io/</string>
+<!--    <string name="server_url">https://14b72ec359b8.ngrok.io/</string>-->
 </resources>
