--- a/app/src/debug/res/values/ids.xml
+++ b/app/src/debug/res/values/ids.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="server_url" translatable="false">https://05317f1a2915.ngrok.io/</string>
+<!--    <string name="server_url" translatable="false">https://05317f1a2915.ngrok.io/</string>-->
 </resources>
